crates/pardosa-schema/tests/compile_fail/f64_field_rejected.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    weight: f64,
}
fn main() {}
